--- a/Heleonix.Testing.NUnit/Heleonix.Testing.NUnit.csproj
+++ b/Heleonix.Testing.NUnit/Heleonix.Testing.NUnit.csproj
@@ -2,7 +2,7 @@
   <Import Project="../SharedProjectInfo.proj" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net45;net451;net452;net46;net461;net462;netcoreapp1.1;netcoreapp2.0;netstandard1.1;netstandard1.2;netstandard1.3;netstandard1.4;netstandard1.5;netstandard1.6</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
