--- a/Heleonix.Testing.NUnit/Heleonix.Testing.NUnit.csproj
+++ b/Heleonix.Testing.NUnit/Heleonix.Testing.NUnit.csproj
@@ -42,7 +42,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="nunit" Version="3.9.0">
-      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>compile</IncludeAssets>
     </PackageReference>
     <PackageReference Include="RoslynSecurityGuard" Version="2.3.0">
       <PrivateAssets>all</PrivateAssets>
