--- a/Heleonix.Testing.NUnit.Tests/Heleonix.Testing.NUnit.Tests.csproj
+++ b/Heleonix.Testing.NUnit.Tests/Heleonix.Testing.NUnit.Tests.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="../SharedProjectInfo.proj" />
+  <Import Project="../SharedProjectInfo.props" />
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
@@ -34,6 +34,11 @@
     <PackageReference Include="Moq" Version="4.8.3" />
     <PackageReference Include="NUnit" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
+    <PackageReference Include="codecracker.CSharp" Version="1.1.0" PrivateAssets="all"/>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.1" PrivateAssets="all"/>
+    <PackageReference Include="RoslynSecurityGuard" Version="2.3.0" PrivateAssets="all"/>
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="7.3.1.5982" PrivateAssets="all"/>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="all"/>
   </ItemGroup>
 
   <ItemGroup>
