--- a/Heleonix.Testing.NUnit/Heleonix.Testing.NUnit.csproj
+++ b/Heleonix.Testing.NUnit/Heleonix.Testing.NUnit.csproj
@@ -35,13 +35,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="codecracker.CSharp" Version="1.1.0" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.4" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="7.16.0.8981" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers" />
+    <PackageReference Include="SecurityCodeScan" Version="3.2.0" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="nunit" Version="3.9.0">
       <IncludeAssets>compile;runtime</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="codecracker.CSharp" Version="1.1.0" PrivateAssets="all"/>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.1" PrivateAssets="all"/>
-    <PackageReference Include="RoslynSecurityGuard" Version="2.3.0" PrivateAssets="all"/>
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="7.3.1.5982" PrivateAssets="all"/>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="all"/>
   </ItemGroup>
 </Project>
