Implemented #5: marks for succeeded and failed tests; Implemented #4: asserting specs should allow other specs to execute if they're failing.

--- a/Heleonix.Testing.NUnit/Heleonix.Testing.NUnit.csproj
+++ b/Heleonix.Testing.NUnit/Heleonix.Testing.NUnit.csproj
@@ -2,7 +2,7 @@
   <Import Project="../SharedProjectInfo.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
