--- a/test/Heleonix.Testing.NUnit.Tests/Heleonix.Testing.NUnit.Tests.csproj
+++ b/test/Heleonix.Testing.NUnit.Tests/Heleonix.Testing.NUnit.Tests.csproj
@@ -14,7 +14,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Heleonix.Testing.NUnit" Version="2.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -35,5 +34,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Heleonix.Testing.NUnit\Heleonix.Testing.NUnit.csproj" />
   </ItemGroup>
 </Project>
