--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <Version>2.0.1</Version>
+    <Version>1.0.0</Version>
     <Description>The library for writing tests in BDD and AAA styles</Description>
     <PackageTags>Heleonix test nunit bdd behavior driven development tdd test driven development aaa arrange act assert</PackageTags>
 
@@ -9,21 +9,21 @@
 
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Heleonix/Heleonix.Testing/tree/master</RepositoryUrl>
-    <PackageLicenseUrl>https://github.com/Heleonix/Heleonix.Testing/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/Heleonix/Heleonix.Testing/tree/master</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/Heleonix/documentation/master/images/heleonix-logos/Heleonix-logo-128x128.jpg</PackageIconUrl>
+    <PackageProjectUrl>https://heleonix.github.io/docs/Heleonix.Testing</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/Heleonix/docs/master/images/heleonix-logos/Heleonix-logo-128x128.jpg</PackageIconUrl>
 
-    <IsTool>false</IsTool>
     <IncludeSymbols>false</IncludeSymbols>
     <IncludeSource>false</IncludeSource>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <ContentTargetFolders>.\</ContentTargetFolders>
     <BuildOutputTargetFolder>.\</BuildOutputTargetFolder>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+    <None Include="..\..\LICENSE" Pack="true" PackagePath="/"/>
+    <None Include="..\..\README.md" Pack="true" PackagePath="/"/>
   </ItemGroup>
 
   <PropertyGroup>
@@ -31,7 +31,6 @@
     <LangVersion>latest</LangVersion>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
