fix: Fixed generation of the incorrect nuget package without the lib folder.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -12,11 +12,7 @@
     <PackageProjectUrl>https://heleonix.github.io/docs/Heleonix.Testing</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/Heleonix/docs/master/images/heleonix-logos/Heleonix-logo-128x128.jpg</PackageIconUrl>
 
-    <IncludeSymbols>false</IncludeSymbols>
-    <IncludeSource>false</IncludeSource>
-    <NoPackageAnalysis>true</NoPackageAnalysis>
-    <ContentTargetFolders>.\</ContentTargetFolders>
-    <BuildOutputTargetFolder>.\</BuildOutputTargetFolder>
+    <NoWarn>NU5048</NoWarn>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
