--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -18,8 +18,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\LICENSE" Pack="true" PackagePath="/"/>
-    <None Include="..\..\README.md" Pack="true" PackagePath="/"/>
+    <None Include="..\..\LICENSE" Pack="true" PackagePath="/" Visible="False" />
+    <None Include="..\..\README.md" Pack="true" PackagePath="/" Visible="False" />
   </ItemGroup>
 
   <PropertyGroup>
